<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ubuntu.inclass03.EditActivity">

    <EditText
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textview_dpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dept_edit_eg"
        android:layout_alignStart="@+id/dept_edit_eg"
        android:layout_below="@+id/email_edit"
        android:layout_marginTop="14dp"
        android:text="@string/department"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/dept_edit_eg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textview_dpt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp">

        <RadioButton
            android:id="@+id/edit_rbSIS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sis" />

        <RadioButton
            android:id="@+id/edit_rbCS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cs" />

        <RadioButton
            android:id="@+id/edit_rbBIO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bio" />

        <RadioButton
            android:id="@+id/edit_rbOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/others" />

        <TextView
            android:id="@+id/tv_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dept_edit_eg"
            android:layout_alignStart="@+id/dept_edit_eg"
            android:layout_below="@+id/dept_edit_eg"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/mood"
            android:textColor="@android:color/background_dark" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekbar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dept_edit_eg"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:padding="5dp" />

    <Button
        android:id="@+id/edit_btnsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="23dp"
        android:text="@string/save"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/heading_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/heading"
        android:textSize="20sp" />
</android.widget.RelativeLayout>
